Discovered that the FuGE css downloaded from the FuGE website colored the unvisited links in black, and that - together with the default Maven look-and-feel, resulted in the links in the auto-generated docs being completely invisible. Fixed by commenting-out the unvisited link color in the two css files.

--- a/books/src/site/resources/css/site.css
+++ b/books/src/site/resources/css/site.css
@@ -10,11 +10,11 @@ body {
 }
 
 /* LINKS COLORS */
-A:link    { color: #000000; }
+/*A:link    { color: #000000; }*/
 A:active  { color: #003366; }
-A:visited { color: #555555; } 
+A:visited { color: #555555; }
 
-h1 {	
+h1 {
   text-align: left;
   font-family: helvetica, sans-serif, arial, serif;
 }
