--- a/src/site/resources/css/site.css
+++ b/src/site/resources/css/site.css
@@ -10,7 +10,7 @@ body {
 }
 
 /* LINKS COLORS */
-A:link    { color: #000000; }
+/*A:link    { color: #000000; }*/
 A:active  { color: #003366; }
 A:visited { color: #555555; } 
 
